ms-payment/src/main/java/com/example/mspayment/error/IncorrectPaymentDataException.java
package com.example.mspayment.error;

public class IncorrectPaymentDataException extends CommonException{
    public IncorrectPaymentDataException(String errorMessage) {
        super(ErrorCodes.INVALID_PAYMENT_DATA, errorMessage);
    }
}
